fix mobile css & icon text z-index

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -59,3 +59,15 @@
         flex-direction: column;
       }
 }
+
+
+@media (max-width:600px) {
+  #computer-img-id{
+    width: 100%;
+    height: 100%;
+  }
+  .computers_img{
+    width: 100%;
+    height: 100%;
+}
+}
