--- a/src/app/workingExperience/hactl/hactl.component.scss
+++ b/src/app/workingExperience/hactl/hactl.component.scss
@@ -26,3 +26,11 @@
       flex-direction: column;
     }
 }
+
+
+@media (max-width:600px) {
+  .mat-mdc-card-image{
+    width: 100%;
+    height: 100%;
+}
+}
